--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,142 @@
-nav {
-    background-color: rgb(196, 200, 204);
-color: black;
-text-align: center;
-font-style: italic;
-padding-top: 20px;
-padding-bottom: 20px;
-}
-section{
-background-color: rgb(255, 255, 255);
-color: black;
-width: 80%;
-float: right;
-}
-aside{
-    background-color: rgb(83, 90, 90);
-    width: 30%;
-    padding-left: 1px;
-    margin-left: 1px;
-    float: right;
-}
-footer{
-    background-color: black;
-    color: white;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    position: fixed;
-    width: 100%;
-    bottom: 0px;
-}
-header {
-    background-color: black;
-    color: blueviolet;
-    padding: 5px;
-    text-align: center;
-    color: white;
-}
-body {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: url(/intro-to-vscode/DSC_4481.jpg);
-    }  
-
-.nav-bar {
-list-style-type: none;
-padding: 0;
-margin: 0;
-
-    }
-
-.li-nav {
-    display: inline;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-    letter-spacing: 4px;
-}
-
-li a:hover {
-    background-color: #ffffff;
-    color: rgb(255, 31, 31);
-}
-.sidebar-style {
-    background-color: rgb(124, 126, 128);
-    color: black;
-    text-align: center;
-    font-style: italic;
-    float: left;
-    margin: 0;
-    padding: 0;
-    display: block;
-    width: 20%;
-    height: 100%;
-    position: static;
-    line-height: 5;
-    
-}
 .centered {
     text-align: center;
+    align-content: center;
+    align-items: center;
 }
-
-.img-float-right{
+.container {
+    padding: 10px;
+}
+.padded {
+    padding: 10px;
+}
+.footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    color: white;
+  }
+  .border {
+    border: 2px;
+    border-style: solid;
+    border-color: black;
+  }
+  .placeholder-img {
+	width: 100px;
+	height: 100px;
+	margin: 20px 20px 20px 20px;
+	background: rgb(182, 177, 177);
+	border: 1px solid black;
+    margin: 10px;
+}
+h2 {
+    font-size: 22px;
+  }
+  .full-width {
+	width: 100%;
+}
+.right {
     float: right;
+    text-align: right;
 }
-.sidebar-list {
-    list-style-type: none;
-}
-p {
-    padding-left: 10px;
-}
-img {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-h2 {padding-left: 10px;}
-
-a:visited{
-    color: rgb(33, 36, 255);
-}
-.img-left{
+.left {
     float: left;
+    text-align: left;
 }
-label{
-    padding-left: 10px;
+.ad {
+height: 300px;
+}
+.korosta {
+    color: black;
+    background-color: grey;
+}
+a:link {
+    color: black;
+    text-decoration: none;
+}
+a:visited {
+    color: black;
+}
+
+.height {
+    height: 200px;
+}
+h3 {
+    font-size: 18px;
+}
+body {
+    background-color: white; 
+}
+header {
+    background-color: lightgray;
+}
+.btn-secondary {
+    background-color: rgb(171, 173, 171);
+    border: none;
+    margin:  10px;
+}
+.front-pg-company {
+    border: 2px;
+    border-style: solid;
+    margin: 10px;
+    padding: 10px;
+    border-color: lightgrey;
+    border-radius: 10px;
+  
+}
+a.company-info:link {
+        color: black;
+        text-decoration: none;
+    }
+a.company-info:visited {
+        color: black;
+        text-decoration: none;
+    }
+a.company-info:hover {
+        background-color: none;
+        text-decoration: underline;
+        font-weight: bold;
+        transition: 0.5s;
+        transition-timing-function: ease;
+    }
+.btn-primary {
+        background-color: rgb(176, 231, 176);
+        border: none;
+        border-radius: 8px;
+        padding: 6px;
+    }
+#header-logo{
+    font-size: 30px;
+    margin: 10px;
+
+}
+.nav {
+    padding-top: 10px;
+}
+.col {
+    margin-bottom: 30px;
+}
+.hero-image {
+    background: url(/vastuullisetlastenvaatteet-22.jpg) no-repeat center; 
+    background-size: cover;
+    position: relative;
+    height: 350px;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    letter-spacing: 5px;
+    color: rgb(87, 85, 85);
+    }
+h1{
+color: black;
+}
+.overflow{
+    background-color: rgb(255, 255, 255, 0.4);
 }
